fixed advert on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -243,6 +243,7 @@ footer ul li span{ display: block; margin:20px 0;}
 	width: 100%;
 }
 
+#advertisement{margin-top:60px;}
 
 @media (max-width: 450px) {
    #mc_embed_signup input,
@@ -254,5 +255,6 @@ footer ul li span{ display: block; margin:20px 0;}
 	   display:block!important;
 	   margin:0!important;
    }
+   #advertisement{display:none;}
 }
 
